<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp.MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                android:text="General Knowledge Quiz"
                android:textAlignment="center"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/note"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/album_description_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/album_description"
                android:inputType="textMultiLine"
                android:paddingBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/q2"
                android:textSize="30dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/nd_RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_delhi"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/chd_RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chandigarh"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/bgl_RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bangalore"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/mum_RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mumbai"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="20dp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/q3"
                android:textSize="30dp" />

            <CheckBox
                android:id="@+id/ch1_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chandigarh"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/ch2_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delhi"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/ch3_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lakshadweep"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/ch4_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mumbai"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/q4"
                android:textSize="30dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_button_22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="22"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/radio_button_25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/radio_button_29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="29"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/radio_button_30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="20dp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/q5"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/q5_enterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/album_description"
                android:inputType="textMultiLine"
                android:paddingBottom="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="submit"
                android:text="Submit" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
